# TheSunSystem

./: CMakeLists.txt  SunSystem
include/: Artificials.hpp  Naturals.hpp  Objects.hpp
src/: main.cpp
